# src/routes/municipios.routes.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const router = express.Router();
+
+const municipioController = require('../controllers/municipios.controller');
+
+router.get('/', municipioController.listar);
+router.get('/ranking', municipioController.ranking);
+
+module.exports = router;
